--- a/mvCommerce/Libraries/Lang/Message.resx
+++ b/mvCommerce/Libraries/Lang/Message.resx
@@ -132,6 +132,9 @@
   <data name="MSG_E005" xml:space="preserve">
     <value>O campo {0} não está igual ao campo {1}, digite novamente.</value>
   </data>
+  <data name="MSG_E006" xml:space="preserve">
+    <value>O valor do campo {0} não está entre {1} e {2}</value>
+  </data>
   <data name="MSG_S001" xml:space="preserve">
     <value>Registro salvo com sucesso!</value>
   </data>
