--- a/mvCommerce/Libraries/Lang/Message.resx
+++ b/mvCommerce/Libraries/Lang/Message.resx
@@ -121,10 +121,10 @@
     <value>O campo {0} é obrigatório!</value>
   </data>
   <data name="MSG_E002" xml:space="preserve">
-    <value>O campo {0} deve ter no mínimo {1} caracteres</value>
+    <value>O campo {0} deve ter no mínimo {1} caracteres.</value>
   </data>
   <data name="MSG_E003" xml:space="preserve">
-    <value>O campo {0} deve ter no máximo {1} caracteres</value>
+    <value>O campo {0} deve ter no máximo {1} caracteres.</value>
   </data>
   <data name="MSG_E004" xml:space="preserve">
     <value>O {0} não é válido, digite um {0} válido por favor!</value>
@@ -133,7 +133,13 @@
     <value>O campo {0} não está igual ao campo {1}, digite novamente.</value>
   </data>
   <data name="MSG_E006" xml:space="preserve">
-    <value>O valor do campo {0} não está entre {1} e {2}</value>
+    <value>O valor do campo {0} não está entre {1} e {2}.</value>
+  </data>
+  <data name="MSG_E007" xml:space="preserve">
+    <value>Quantidade não pode ser 0, se não deseja mais o produto, por favor, remova do carrinho.</value>
+  </data>
+  <data name="MSG_E008" xml:space="preserve">
+    <value>Quantidade do produto solicitado é maior do que temos em estoque deste produto.</value>
   </data>
   <data name="MSG_S001" xml:space="preserve">
     <value>Registro salvo com sucesso!</value>
@@ -143,5 +149,8 @@
   </data>
   <data name="MSG_S003" xml:space="preserve">
     <value>Senha enviada para o e-mail com sucesso!</value>
+  </data>
+  <data name="MSG_S004" xml:space="preserve">
+    <value>Produto adicionado ao carrinho!!</value>
   </data>
 </root>
